# evo

./: pyproject.toml
evo/: antibody.py  dataset.py  sequence.py
evo/data/: IGHV.fasta  IGLV.fasta
evo/oracles/: __init__.py  base.py  covid_oracle.py  esmfold2_fold_server.py  esmfold2_oracle.py  example.py  tag_predictors.py
evo/oracles/data/: CovAbDab_heavy_binds SARS-CoV1.csv  CovAbDab_heavy_binds SARS-CoV2_Beta.csv
