[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evo"
version = "0.0.1"
description = "A monorepo for protein utilities"
authors = [
    {name = "Stephen Z. Lu", email = "stephen.lu@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "biopython",
    "numba",
    "pyarrow",
    "matplotlib",
    "transformers",
    "tape-proteins @ git+https://github.com/songlab-cal/tape@master",
    "fair-esm @ git+https://github.com/facebookresearch/esm@main",
    # --------- Development Tools --------- #
    "rich",
    "rootutils",
    "abnumber>=0.4.4",
    "pre-commit>=4.2.0",
    "netam>=0.2.1",
    "promb>=1.0.2",
    "iglm>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=7.4.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "pytest>=7.4.2",
]

[tool.uv.sources]
netam = { git = "https://github.com/matsengrp/netam.git" }

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
